# OpenGL-Template

./: CMakeLists.txt  README.md
shaders/: sky.frag  sky.vert
src/: main.cpp
src/app/: App.cpp  App.h
src/camera/: Camera.cpp  Camera.h
src/rendering/: Shader.cpp  Shader.h  Sky.cpp  Sky.h
src/ui/: UI.cpp  UI.h
